src/adaptive-hint-servers/rest_server/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> factor
Rule 3     statement -> list
Rule 4     expression -> expression PLUS factor
Rule 5     expression -> factor PLUS factor
Rule 6     expression -> expression MINUS factor
Rule 7     expression -> factor MINUS factor
Rule 8     factor -> factor TIMES factor
Rule 9     factor -> factor DIVIDE factor
Rule 10    factor -> factor EXP factor
Rule 11    factor -> factor factor
Rule 12    factor -> MINUS factor
Rule 13    factor -> factor FACTORIAL
Rule 14    factor -> CHOOSE LPAREN list RPAREN
Rule 15    factor -> Q LPAREN factor RPAREN
Rule 16    factor -> Q LPAREN expression RPAREN
Rule 17    factor -> LPAREN expression RPAREN
Rule 18    factor -> LBRACKET expression RBRACKET
Rule 19    factor -> LPAREN factor RPAREN
Rule 20    factor -> LBRACKET factor RBRACKET
Rule 21    factor -> LPAREN expression
Rule 22    factor -> LBRACKET expression
Rule 23    factor -> LPAREN factor
Rule 24    factor -> LBRACKET factor
Rule 25    factor -> CHOOSE LPAREN list
Rule 26    factor -> LSET list RSET
Rule 27    factor -> LSET expression RSET
Rule 28    factor -> LSET RSET
Rule 29    factor -> LPAREN list RPAREN
Rule 30    list -> expression COMMA
Rule 31    list -> list expression COMMA
Rule 32    list -> list expression
Rule 33    list -> factor COMMA
Rule 34    list -> list factor COMMA
Rule 35    list -> list factor
Rule 36    factor -> NUMBER
Rule 37    factor -> VARIABLE

Terminals, with rules where they appear

CHOOSE               : 14 25
COMMA                : 30 31 33 34
DIVIDE               : 9
EXP                  : 10
FACTORIAL            : 13
LBRACKET             : 18 20 22 24
LPAREN               : 14 15 16 17 19 21 23 25 29
LSET                 : 26 27 28
MINUS                : 6 7 12
NUMBER               : 36
PLUS                 : 4 5
Q                    : 15 16
RBRACKET             : 18 20
RPAREN               : 14 15 16 17 19 29
RSET                 : 26 27 28
TIMES                : 8
VARIABLE             : 37
error                : 

Nonterminals, with rules where they appear

expression           : 1 4 6 16 17 18 21 22 27 30 31 32
factor               : 2 4 5 5 6 7 7 8 8 9 9 10 10 11 11 12 13 15 19 20 23 24 33 34 35
list                 : 3 14 25 26 29 31 32 34 35
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . factor
    (3) statement -> . list
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE
    (30) list -> . expression COMMA
    (31) list -> . list expression COMMA
    (32) list -> . list expression
    (33) list -> . factor COMMA
    (34) list -> . list factor COMMA
    (35) list -> . list factor

    MINUS           shift and go to state 12
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

    list                           shift and go to state 2
    expression                     shift and go to state 11
    statement                      shift and go to state 8
    factor                         shift and go to state 9

state 1

    (18) factor -> LBRACKET . expression RBRACKET
    (20) factor -> LBRACKET . factor RBRACKET
    (22) factor -> LBRACKET . expression
    (24) factor -> LBRACKET . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE

    MINUS           shift and go to state 12
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

    expression                     shift and go to state 14
    factor                         shift and go to state 13

state 2

    (3) statement -> list .
    (31) list -> list . expression COMMA
    (32) list -> list . expression
    (34) list -> list . factor COMMA
    (35) list -> list . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE

    $end            reduce using rule 3 (statement -> list .)
    MINUS           shift and go to state 12
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

    expression                     shift and go to state 16
    factor                         shift and go to state 15

state 3

    (36) factor -> NUMBER .

    COMMA           reduce using rule 36 (factor -> NUMBER .)
    PLUS            reduce using rule 36 (factor -> NUMBER .)
    MINUS           reduce using rule 36 (factor -> NUMBER .)
    TIMES           reduce using rule 36 (factor -> NUMBER .)
    DIVIDE          reduce using rule 36 (factor -> NUMBER .)
    EXP             reduce using rule 36 (factor -> NUMBER .)
    FACTORIAL       reduce using rule 36 (factor -> NUMBER .)
    CHOOSE          reduce using rule 36 (factor -> NUMBER .)
    Q               reduce using rule 36 (factor -> NUMBER .)
    LPAREN          reduce using rule 36 (factor -> NUMBER .)
    LBRACKET        reduce using rule 36 (factor -> NUMBER .)
    LSET            reduce using rule 36 (factor -> NUMBER .)
    NUMBER          reduce using rule 36 (factor -> NUMBER .)
    VARIABLE        reduce using rule 36 (factor -> NUMBER .)
    RSET            reduce using rule 36 (factor -> NUMBER .)
    RBRACKET        reduce using rule 36 (factor -> NUMBER .)
    $end            reduce using rule 36 (factor -> NUMBER .)
    RPAREN          reduce using rule 36 (factor -> NUMBER .)


state 4

    (15) factor -> Q . LPAREN factor RPAREN
    (16) factor -> Q . LPAREN expression RPAREN

    LPAREN          shift and go to state 17


state 5

    (37) factor -> VARIABLE .

    COMMA           reduce using rule 37 (factor -> VARIABLE .)
    PLUS            reduce using rule 37 (factor -> VARIABLE .)
    MINUS           reduce using rule 37 (factor -> VARIABLE .)
    TIMES           reduce using rule 37 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 37 (factor -> VARIABLE .)
    EXP             reduce using rule 37 (factor -> VARIABLE .)
    FACTORIAL       reduce using rule 37 (factor -> VARIABLE .)
    CHOOSE          reduce using rule 37 (factor -> VARIABLE .)
    Q               reduce using rule 37 (factor -> VARIABLE .)
    LPAREN          reduce using rule 37 (factor -> VARIABLE .)
    LBRACKET        reduce using rule 37 (factor -> VARIABLE .)
    LSET            reduce using rule 37 (factor -> VARIABLE .)
    NUMBER          reduce using rule 37 (factor -> VARIABLE .)
    VARIABLE        reduce using rule 37 (factor -> VARIABLE .)
    RSET            reduce using rule 37 (factor -> VARIABLE .)
    RBRACKET        reduce using rule 37 (factor -> VARIABLE .)
    $end            reduce using rule 37 (factor -> VARIABLE .)
    RPAREN          reduce using rule 37 (factor -> VARIABLE .)


state 6

    (26) factor -> LSET . list RSET
    (27) factor -> LSET . expression RSET
    (28) factor -> LSET . RSET
    (30) list -> . expression COMMA
    (31) list -> . list expression COMMA
    (32) list -> . list expression
    (33) list -> . factor COMMA
    (34) list -> . list factor COMMA
    (35) list -> . list factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE

    RSET            shift and go to state 19
    MINUS           shift and go to state 12
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

    expression                     shift and go to state 21
    list                           shift and go to state 18
    factor                         shift and go to state 20

state 7

    (14) factor -> CHOOSE . LPAREN list RPAREN
    (25) factor -> CHOOSE . LPAREN list

    LPAREN          shift and go to state 22


state 8

    (0) S' -> statement .



state 9

    (2) statement -> factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (33) list -> factor . COMMA
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE

    $end            reduce using rule 2 (statement -> factor .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 30
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 23
    EXP             shift and go to state 27
    FACTORIAL       shift and go to state 24
    COMMA           shift and go to state 29
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

    factor                         shift and go to state 28

state 10

    (17) factor -> LPAREN . expression RPAREN
    (19) factor -> LPAREN . factor RPAREN
    (21) factor -> LPAREN . expression
    (23) factor -> LPAREN . factor
    (29) factor -> LPAREN . list RPAREN
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE
    (30) list -> . expression COMMA
    (31) list -> . list expression COMMA
    (32) list -> . list expression
    (33) list -> . factor COMMA
    (34) list -> . list factor COMMA
    (35) list -> . list factor

    MINUS           shift and go to state 12
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

    list                           shift and go to state 31
    expression                     shift and go to state 33
    factor                         shift and go to state 32

state 11

    (1) statement -> expression .
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor
    (30) list -> expression . COMMA

    $end            reduce using rule 1 (statement -> expression .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 36
    COMMA           shift and go to state 35


state 12

    (12) factor -> MINUS . factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE

    MINUS           shift and go to state 12
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

    factor                         shift and go to state 37

state 13

    (20) factor -> LBRACKET factor . RBRACKET
    (24) factor -> LBRACKET factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE

  ! shift/reduce conflict for RBRACKET resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for EXP resolved as shift
  ! shift/reduce conflict for FACTORIAL resolved as shift
  ! shift/reduce conflict for CHOOSE resolved as shift
  ! shift/reduce conflict for Q resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LSET resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
    RBRACKET        shift and go to state 38
    COMMA           reduce using rule 24 (factor -> LBRACKET factor .)
    RSET            reduce using rule 24 (factor -> LBRACKET factor .)
    $end            reduce using rule 24 (factor -> LBRACKET factor .)
    RPAREN          reduce using rule 24 (factor -> LBRACKET factor .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 30
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 23
    EXP             shift and go to state 27
    FACTORIAL       shift and go to state 24
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

  ! PLUS            [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! MINUS           [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! TIMES           [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! DIVIDE          [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! EXP             [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! FACTORIAL       [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! CHOOSE          [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! Q               [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! LPAREN          [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! LBRACKET        [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! LSET            [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! NUMBER          [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! VARIABLE        [ reduce using rule 24 (factor -> LBRACKET factor .) ]
  ! RBRACKET        [ reduce using rule 24 (factor -> LBRACKET factor .) ]

    factor                         shift and go to state 28

state 14

    (18) factor -> LBRACKET expression . RBRACKET
    (22) factor -> LBRACKET expression .
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor

  ! shift/reduce conflict for RBRACKET resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    RBRACKET        shift and go to state 39
    COMMA           reduce using rule 22 (factor -> LBRACKET expression .)
    TIMES           reduce using rule 22 (factor -> LBRACKET expression .)
    DIVIDE          reduce using rule 22 (factor -> LBRACKET expression .)
    EXP             reduce using rule 22 (factor -> LBRACKET expression .)
    FACTORIAL       reduce using rule 22 (factor -> LBRACKET expression .)
    CHOOSE          reduce using rule 22 (factor -> LBRACKET expression .)
    Q               reduce using rule 22 (factor -> LBRACKET expression .)
    LPAREN          reduce using rule 22 (factor -> LBRACKET expression .)
    LBRACKET        reduce using rule 22 (factor -> LBRACKET expression .)
    LSET            reduce using rule 22 (factor -> LBRACKET expression .)
    NUMBER          reduce using rule 22 (factor -> LBRACKET expression .)
    VARIABLE        reduce using rule 22 (factor -> LBRACKET expression .)
    RSET            reduce using rule 22 (factor -> LBRACKET expression .)
    $end            reduce using rule 22 (factor -> LBRACKET expression .)
    RPAREN          reduce using rule 22 (factor -> LBRACKET expression .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 36

  ! PLUS            [ reduce using rule 22 (factor -> LBRACKET expression .) ]
  ! MINUS           [ reduce using rule 22 (factor -> LBRACKET expression .) ]
  ! RBRACKET        [ reduce using rule 22 (factor -> LBRACKET expression .) ]


state 15

    (34) list -> list factor . COMMA
    (35) list -> list factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE

    COMMA           shift and go to state 40
    RPAREN          reduce using rule 35 (list -> list factor .)
    LPAREN          reduce using rule 35 (list -> list factor .)
    LBRACKET        reduce using rule 35 (list -> list factor .)
    LSET            reduce using rule 35 (list -> list factor .)
    NUMBER          reduce using rule 35 (list -> list factor .)
    VARIABLE        reduce using rule 35 (list -> list factor .)
    RBRACKET        reduce using rule 35 (list -> list factor .)
    $end            reduce using rule 35 (list -> list factor .)
    RSET            reduce using rule 35 (list -> list factor .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 30
    TIMES           shift and go to state 25
    DIVIDE          shift and go to state 23
    EXP             shift and go to state 27
    FACTORIAL       shift and go to state 24
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4

  ! MINUS           [ reduce using rule 35 (list -> list factor .) ]
  ! CHOOSE          [ reduce using rule 35 (list -> list factor .) ]
  ! Q               [ reduce using rule 35 (list -> list factor .) ]
  ! PLUS            [ reduce using rule 35 (list -> list factor .) ]
  ! TIMES           [ reduce using rule 35 (list -> list factor .) ]
  ! DIVIDE          [ reduce using rule 35 (list -> list factor .) ]
  ! EXP             [ reduce using rule 35 (list -> list factor .) ]
  ! FACTORIAL       [ reduce using rule 35 (list -> list factor .) ]
  ! COMMA           [ reduce using rule 35 (list -> list factor .) ]
  ! LPAREN          [ shift and go to state 10 ]
  ! LBRACKET        [ shift and go to state 1 ]
  ! LSET            [ shift and go to state 6 ]
  ! NUMBER          [ shift and go to state 3 ]
  ! VARIABLE        [ shift and go to state 5 ]

    factor                         shift and go to state 28

state 16

    (31) list -> list expression . COMMA
    (32) list -> list expression .
    (4) expression -> expression . PLUS factor
    (6) expression -> expression . MINUS factor

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    COMMA           shift and go to state 41
    RPAREN          reduce using rule 32 (list -> list expression .)
    CHOOSE          reduce using rule 32 (list -> list expression .)
    Q               reduce using rule 32 (list -> list expression .)
    LPAREN          reduce using rule 32 (list -> list expression .)
    LBRACKET        reduce using rule 32 (list -> list expression .)
    LSET            reduce using rule 32 (list -> list expression .)
    NUMBER          reduce using rule 32 (list -> list expression .)
    VARIABLE        reduce using rule 32 (list -> list expression .)
    RBRACKET        reduce using rule 32 (list -> list expression .)
    TIMES           reduce using rule 32 (list -> list expression .)
    DIVIDE          reduce using rule 32 (list -> list expression .)
    EXP             reduce using rule 32 (list -> list expression .)
    FACTORIAL       reduce using rule 32 (list -> list expression .)
    $end            reduce using rule 32 (list -> list expression .)
    RSET            reduce using rule 32 (list -> list expression .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 36

  ! MINUS           [ reduce using rule 32 (list -> list expression .) ]
  ! PLUS            [ reduce using rule 32 (list -> list expression .) ]
  ! COMMA           [ reduce using rule 32 (list -> list expression .) ]


state 17

    (15) factor -> Q LPAREN . factor RPAREN
    (16) factor -> Q LPAREN . expression RPAREN
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor

    MINUS           shift and go to state 12
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

    expression                     shift and go to state 43
    factor                         shift and go to state 42

state 18

    (26) factor -> LSET list . RSET
    (31) list -> list . expression COMMA
    (32) list -> list . expression
    (34) list -> list . factor COMMA
    (35) list -> list . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . Q LPAREN factor RPAREN
    (16) factor -> . Q LPAREN expression RPAREN
    (17) factor -> . LPAREN expression RPAREN
    (18) factor -> . LBRACKET expression RBRACKET
    (19) factor -> . LPAREN factor RPAREN
    (20) factor -> . LBRACKET factor RBRACKET
    (21) factor -> . LPAREN expression
    (22) factor -> . LBRACKET expression
    (23) factor -> . LPAREN factor
    (24) factor -> . LBRACKET factor
    (25) factor -> . CHOOSE LPAREN list
    (26) factor -> . LSET list RSET
    (27) factor -> . LSET expression RSET
    (28) factor -> . LSET RSET
    (29) factor -> . LPAREN list RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . VARIABLE

    RSET            shift and go to state 44
    MINUS           shift and go to state 12
    CHOOSE          shift and go to state 7
    Q               shift and go to state 4
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 1
    LSET            shift and go to state 6
    NUMBER          shift and go to state 3
    VARIABLE        shift and go to state 5

    expression                     shift and go to state 16
    factor                         shift and go to state 15

state 19

    (28) factor -> LSET RSET .
